Made password encryption and divided dashboard user vs container user

--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container-register/container-register.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container-register/container-register.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" class="register-page-container">
   <div class="register-centering-wrapper">
     <div class="register-main-wrapper">
-      <app-register-form [userType]="'dashboard'"></app-register-form>
+      <app-register-form [userType]="'container'"></app-register-form>
     </div>
   </div>
 </div>
