--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/login/login.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/login/login.component.html
@@ -4,7 +4,7 @@
       <div class="login-main-container">
         <div class="login-stream-logo"></div>
         <div class="login-sub-wrapper">
-          <app-login-form [userType]="'normal'"></app-login-form>
+          <app-login-form [userType]="'dashboard'"></app-login-form>
         </div>
       </div>
     </div>
