--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/directives/menu/menu.component.css
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/directives/menu/menu.component.css
@@ -1,4 +1,62 @@
-.menu-wrapper {
-  background-color: black;
-  padding-left: 10px;
+#navbar {
+  background-color: #333333;
+  height: 100%;
+  width: 60px;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid black;
+  position: fixed;
+  z-index: 2;
+}
+
+#navbar:hover {
+  box-shadow: 53px -1px 70px 8px rgba(25, 25, 25, 0.75);
+}
+
+.navbar-item {
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 19px;
+  height: 60px;
+  color: #dedede;
+  transition: all 0.15s ease-in-out;
+  width: 100%;
+}
+
+.navbar-item:hover {
+  color: white;
+  background-image: linear-gradient(#16b,#2d8cec);
+}
+
+.navbar-item-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+.navbar-item-text {
+  font-size: 16px;
+  font-family: Gotham SSm A,Gotham SSm B,sans-serif;
+  font-weight: 600;
+}
+
+#navbar a:link {
+  color: #aaa;
+}
+
+#navbar a:visited {
+  color: #aaa;
+}
+
+#navbar .active-navbar-item {
+  color: white;
+}
+
+/* Disabling anchor properties */
+a, a:visited, a:hover, a:active {
+  color: inherit !important;
+  text-decoration: inherit !important;
 }
