added the concept of historical

--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/directives/menu/menu.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/directives/menu/menu.component.html
@@ -7,4 +7,12 @@
             </div>
         </a>
     </div>
+    <div>
+        <a routerLink="/historical">
+            <div class="navbar-item" [ngClass]="{'active-navbar-item': isActive('historical')}" (click)="onNavbarItemClick('historical')">
+                <span class="navbar-item-icon"><i class="fa fa-history"></i></span>
+                <span class="navbar-item-text" *ngIf="isNavbarHovered" style="margin-left:24px">Historical</span>
+            </div>
+        </a>
+    </div>
 </div>
