More updated for the queues

--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/directives/menu/menu.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/directives/menu/menu.component.html
@@ -10,8 +10,8 @@
     <div>
         <a routerLink="/historical">
             <div class="navbar-item" [ngClass]="{'active-navbar-item': isActive('historical')}" (click)="onNavbarItemClick('historical')">
-                <span class="navbar-item-icon"><i class="fa fa-history"></i></span>
-                <span class="navbar-item-text" *ngIf="isNavbarHovered" style="margin-left:24px">Historical</span>
+                <span class="navbar-item-icon"><i class="fa fa-history" style="margin-left:2px"></i></span>
+                <span class="navbar-item-text" *ngIf="isNavbarHovered" style="margin-left:28px">Historical</span>
             </div>
         </a>
     </div>
