--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/dashboard/dashboard.component.css
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/dashboard/dashboard.component.css
@@ -11,6 +11,11 @@
     float: right;
 }
 
+#add-topic-dialog .ui-dialog {
+    min-width: 500px !important;
+    width: 500px !important;
+}
+
 .topics-data-grid-row {
     padding: 10px;
 }
