--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/historical/historical.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/historical/historical.component.html
@@ -1,11 +1,17 @@
 <div class="container-fluid" class="historical-page-wrapper">
-  <p-dialog header="Add queue" [(visible)]="addQueueDialogShow" [style]="{width: '300px', height: '200px'}">
+  <p-dialog header="Add queue" [(visible)]="addQueueDialogShow" [modal]="true" [draggable]="false" [resizable]="false">
     <div class="p-grid">
-        <div class="p-col">
-            <p-dropdown [options]="availableQueues" [(ngModel)]="selectedQueue" optionLabel="name" placeholder="Select queue" appendTo="body"></p-dropdown>
+        <div class="p-col-2" style="padding-top: 12px;">
+            Queue
         </div>
-        <div class="p-col">
-            <p-dropdown [options]="timeframeOptions" [(ngModel)]="selectedTimeframe" placeholder="Select timeframe" appendTo="body"></p-dropdown>
+        <div class="p-col-10">
+            <p-dropdown [options]="availableQueues" [(ngModel)]="selectedQueue" optionLabel="name" placeholder="Select one" appendTo="body"></p-dropdown>
+        </div>
+        <div class="p-col-2" style="padding-top: 12px;">
+            Timeframe
+        </div>
+        <div class="p-col-10">
+            <p-dropdown [options]="timeframeOptions" [(ngModel)]="selectedTimeframe" placeholder="Select one" appendTo="body"></p-dropdown>
         </div>
     </div>
     <p-footer>
@@ -15,19 +21,26 @@
   </p-dialog>
   <app-menu></app-menu>
   <div class="main-page">
-    <p-dataView [value]="queuesData" emptyMessage="No cards." layout="grid">
-      <p-header>
-          <div class="header-fix">
-              <div class="p-grid">
-                  <div class="p-col-6">
-                      <button pButton type="button" label="Add queue" (click)="onAddQueue()" icon="pi pi-plus"></button>
-                  </div>
-                  <div class="p-col-6 data-view-options">
-                      <p-button id="sign-out-btn" label="Sign Out" icon="fa fa-sign-out" (onClick)="onSignOut()"></p-button>
-                  </div>
-              </div>
-          </div>
-      </p-header>
+    <p-dataView [value]="charts" emptyMessage="No cards." layout="grid">
+        <p-header>
+            <div class="header-fix">
+                <div class="p-grid">
+                    <div class="p-col-6">
+                        <button pButton type="button" label="Add queue" (click)="onAddQueue()" icon="pi pi-plus"></button>
+                    </div>
+                    <div class="p-col-6 data-view-options">
+                        <p-button id="sign-out-btn" label="Sign Out" icon="fa fa-sign-out" (onClick)="onSignOut()"></p-button>
+                    </div>
+                </div>
+            </div>
+        </p-header>
+        <ng-template let-chart pTemplate="gridItem">
+            <div class="p-col-12 p-md-4 p-lg-4 queues-data-grid-row">
+                <p-card class="big-card" [header]="chart.queueName" [subheader]="chart.measurement">
+                    <p-chart type="line" [data]="chart.dataset" [options]="chartOptions"></p-chart>
+                </p-card>
+            </div>
+        </ng-template>
     </p-dataView>
   </div>
 </div>
