--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container/container.component.css
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container/container.component.css
@@ -57,3 +57,9 @@ p-accordion {
     padding: 0px;
     padding-top: 8px;
 }
+
+.info-circle {
+    font-size: 18px;
+    position: relative;
+    top: 5px;
+}
