made the backend for schedule image

--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container/container.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/container/container.component.html
@@ -107,6 +107,9 @@
                 <div class="p-col-10">
                     <input id="repository-name" pInputText type="text" formControlName="repositoryName" size="60" placeholder="my-repository">
                 </div>
+                <div class="p-offset-2 p-col-10" style="padding-left:10px; padding-top: 0px;">
+                    <div class="regular-expression">Must satisfy regular expression '(?:[a-z0-9]+(?:[._-][a-z0-9]+)*/)*[a-z0-9]+(?:[._-][a-z0-9]+)*'</div>
+                </div>
                 <div class="p-col-12">
                     <hr/>
                 </div>
